--- a/packages/ide/src/app/dialog-about/dialog-about.component.html
+++ b/packages/ide/src/app/dialog-about/dialog-about.component.html
@@ -1,6 +1,6 @@
 <mat-dialog-content>
   <button class="close-btn" mat-dialog-close mat-icon-button aria-label="Fechar diálogo" type="button">
-    <svg-icon src="assets/mdi/close.svg" svgAriaLabel="Ícone de fechar diálogo" />
+    <svg-icon src="assets/mdi/close.svg" aria-hidden="true" focusable="false" />
   </button>
 
   <svg-icon src="assets/logo/default.svg" class="logo" alt="Logo do Portugol Studio" />
