--- a/packages/ide/src/app/dialog-renderer/dialog-renderer.component.html
+++ b/packages/ide/src/app/dialog-renderer/dialog-renderer.component.html
@@ -2,7 +2,7 @@
   <span>{{ title }}</span>
   <s></s>
   <button tabindex="-1" type="button" mat-dialog-close mat-icon-button aria-label="Fechar diálogo">
-    <svg-icon src="assets/mdi/close.svg" svgAriaLabel="Ícone de fechar diálogo" />
+    <svg-icon src="assets/mdi/close.svg" aria-hidden="true" focusable="false" />
   </button>
 </header>
 
